<resources>
    <string name="app_name">alcohol</string>
    <string name="st_sub_title">Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account</br>
        <br><b>Register</b> to get started with app</br>
</string>
    <string name="st_title">Hello!</string>
    <string name="ill_img">ill_img</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>

    <string name="Login_sub_title">
        <font color="#00C9BB"><b>Login</b></font> if you already have an account.
    </string>

    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t have an account <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>

    <string name="register_sub_title">
        <font color="#00C9BB"><b>Register</b></font> to get started with app.
    </string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn">REGISTER</string>

    <string name="register_have_account">
        I already have an account <font color="#00C9B8"><b>Login</b></font>
    </string>

    <string name="home_title">Hello!</string>
    <string name="home_sub_title">Welcom to home</string>
    <string name="btn_logout">LOGOUT</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="home_title2">HOME</string>
    <string name="fit_title">FIT</string>
    <string name="profile_title">PROFILE</string>
    <string name="message_title">Message</string>
    <string name="name_of_the_medicine">Name of the medicine</string>


</resources>