<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_started_title"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserratregular"
        android:text="@string/st_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/st_sub_title"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_started_title" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="528dp"
        android:contentDescription="@string/ill_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_started_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonWhite"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/ButtonWhite"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>